--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <link rel="stylesheet" href="styles/architects.css" />
   </head>
   <body>
-    <header>
+    <header class="header-content">
       <nav class="navbar">
         <h3 class="brand">G3- Architects</h3>
+        <ul class="nav-links">
+<li class="nav-items"><a href="" class="nav-link">Home</a></li>
+<li class="nav-items"><a href="" class="nav-link">About </a></li>
+<li class="nav-items"><a href="" class="nav-link">Contact us</a></li>
+<li class="nav-items"><a href="" class="nav-link">Login</a></li>
       </nav>
+
+      <div class="banner">
+        <div class="banner-content">
+                        <h3>Brand New<br>Group of Architects</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                        <button>Explore More</button>
+        </div>
+        <img src="images/banner.png" alt="">
+      </div>
     </header>
     <main></main>
     <footer></footer>
